--- a/componentapp/package.json
+++ b/componentapp/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vant": "^2.12.36",
     "vue": "^2.6.11",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
