--- a/componentapp/package.json
+++ b/componentapp/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "vant": "^2.12.36",
     "vue": "^2.6.11",
     "vue-photo-preview": "^1.1.3",
